# object-detection

./: CMakeLists.txt  README  README_for_setting_the_camera_on_ubuntu  package.xml
data/multi/: board1x4.yml~  board1x8.yml  board1x8.yml~  board2x4.yml~  board2x8.yml  board2x8.yml~  board3x8.yml  board3x8.yml~  board4x4.yml~  board4x8.yml~  board5x8.yml~  board6x8.yml~  boards.yml  c1.yml~
data/multi/board4/: board1x4.yml  board2x4.yml  board3x4.yml  board4x4.yml
data/multi/board6/: board3x8.yml  board5x8.yml  board6x8.yml  boards___.yml
data/multi/dataaa/: bbbbboards.yml  c1.yml  c2.yml  c3.yml  c4.yml  c5.yml  c6.yml
data/viewer/: map.yml  map.yml~  viewer.rviz  viewer.rviz~
include/: FlyCap.h  FlyCap.h~  ObjectTracking.h~  TrackerNode.h~  trackingobject.h~
launch/: multi-boards.launch  multi-boards.launch~  system_viewer.launch  system_viewer.launch~  track.launch  track.launch~  track1.launch  track1.launch~  track2.launch  track2.launch~
param/: Tuning_Kalman.yaml  Tuning_Kalman.yaml~  Tuning_Kalman1.yaml  Tuning_Kalman1.yaml~  Tuning_Kalman2.yaml  Tuning_Kalman2.yaml~  parametri.yaml~
src/: FlyCap.cpp~  ObjectTracking.cpp~  TrackerNode.cpp~  detection_marker.cpp~  markerdetector.cpp~  publisherROSimage.cpp~
src/ar_track/: FlyCap.cpp  FlyCap.cpp~  Skew.cpp  Skew_Kalman.cpp  Stima_R_sensore.cpp  Stima_R_sensore.cpp~  TakeData.cpp~  TestFilter.cpp  TestFilter.cpp~  eulero->quat.cpp~  euleroQuat.cpp  euleroQuat.cpp~  publisherROSKalman3.cpp  publisherROSKalman3.cpp~  publisherROSimage.cpp  publisherROSimage.cpp~  publisherROSobj.cpp
